--- a/inventory-management-system/src/css/Item.css
+++ b/inventory-management-system/src/css/Item.css
@@ -7,7 +7,17 @@
     left: 0;
     background-color: #282c34;
     overflow-x: hidden;
+}
 
+.sidenav-loading {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(36, 41, 61);
+    overflow-x: hidden;
 }
 
 .sidenav a {
