--- a/inventory-management-system/src/App.css
+++ b/inventory-management-system/src/App.css
@@ -37,3 +37,12 @@
   background-color: #d6dbe6;
   color: black;
 }
+
+.Home{
+  background-color: #d6dbe6;
+  color: black;
+}
+.Light{
+  background-color: #d6dbe6;
+  color: black;
+}
